    instrument to MIDI instrument map

  * Implemented more proper retrieval of the MIDI/audio driver settings

  * Implemented some UI enhancements for speeding up the
    MIDI instrument mapping process

  * Implemented new table cell editor for editing string list
    parameters with possibilities

  * Added support for escape sequences

  * JS Classic:
    - Added new button to sampler channels for starting an instrument editor

  * Fantasia:
    - Added scrollbar to the channels pane
    - Added new menu items: Edit/Add Channel, Edit/Create MIDI Device,
      Edit/Create Audio Device, View/Toolbar, View/Side Pane,
      View/Devices Pane
    - Added button to the channel screen for starting an instrument editor
      (point the mouse cursor over the channel screen and click 'Edit')
    - Removed the lock border from non-editable text fields in
      properties panes and LS Console

  * Bug fixes:
    - fixed bug #49
    - the first loaded script was not always been executed
    - some javadoc documentation fixes
    - some minor bugfixes

JSampler v0.6a: 2007-08-10
  * The Fantasia distribution is now capable of
    controlling all features available in LinuxSampler

  * Refactoring: all common UI components are moved
    to a new package - org.jsampler.view.std

  * Some GUI enhancements, bugfixes and code cleanup.

JSampler v0.5a: 2007-05-24
  * Implemented instruments database support
  * Added context menu to the MIDI instrument tree

JSampler v0.4a: 2007-04-02
  * Added support for MIDI instrument mapping

  * Added support for effect sends

  * Implemented export of the current sampler configuration
    to LSCP script (Actions/Export/Sampler Configuration or Ctrl + S)

  * The JSampler's data is now stored in a user specified location.
    To change the JSampler's home directory choose Edit/Preferences.

  * Implemented Global Controls bar (View/Global Controls).
    
  * Saving the LS Console's command history on exit is now optional.