@@ -99,6 +99,7 @@ ContextMenu.edit = Edit
 
 instrumentsdb.actions = Actions
 instrumentsdb.actions.addInstruments = Add Instruments
+instrumentsdb.actions.format = Format Database
 instrumentsdb.actions.loadInstrument = Load Instrument
 instrumentsdb.actions.addToMidiMap = Add To MIDI Map
 instrumentsdb.actions.addToOrchestra = Add To Orchestra
