@@ -4,6 +4,7 @@ A4n.removeChannels? = Do you really want to remove all selected channels
 
 FileNotFound! = File not found!
 
+InstrumentsDbFrame.formatDatabase? = All instruments and directories will be permanently removed! Are you sure?
 InstrumentsDbFrame.unknownDirectory! = Could not find directory: {0}
 
 PrefsDlg.ifaceChangeInfo = The interface language will be changed after you restart {0}.
