@@ -32,6 +32,7 @@ help.about = About {0}
 
 instrumentsdb.actions = Actions
 instrumentsdb.actions.addInstruments = Add Instruments
+instrumentsdb.actions.format = Format Database
 instrumentsdb.actions.loadInstrument = Load Instrument
 instrumentsdb.actions.addToMidiMap = Add To MIDI Map
 instrumentsdb.actions.addToOrchestra = Add To Orchestra
